# spec-driven-hackathons

./: README.md  readme.md  readme2.md
phase-1/: CLAUDE.md  README.md  pyproject.toml
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
phase-1/history/prompts/todo-console-app/: 2-create-todo-console-app-spec.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-create-implementation-tasks.tasks.prompt.md  5-implement-todo-console-app.tasks.prompt.md
phase-1/specs/1-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/1-todo-console-app/checklists/: requirements.md
phase-1/specs/1-todo-console-app/contracts/: internal-api.md
phase-1/src/todo_app/: __init__.py  main.py
phase-1/src/todo_app/cli/: __init__.py  console_interface.py
phase-1/src/todo_app/models/: __init__.py  task.py
phase-1/src/todo_app/services/: __init__.py  task_service.py
phase-1/tests/: __init__.py
phase-1/tests/integration/: __init__.py  test_console_flow.py  test_data_persistence.py
phase-1/tests/unit/: __init__.py  test_console_interface.py  test_task.py  test_task_service.py
phase-2/: .gitignore
phase-5/backend/: .dockerignore  Dockerfile  pyproject.toml
phase-5/backend/src/: main.py
phase-5/backend/src/auth/: jwt.py
phase-5/backend/src/chat/: agent.py
phase-5/backend/src/db/: session.py
phase-5/backend/src/mcp_server/: config.py  database.py  server.py
phase-5/backend/src/models/: conversation.py  enums.py  user.py
(+238 files in other folders)
